cmake_minimum_required(VERSION 3.20)
project(Hello_C C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(static)
add_subdirectory(DS-Type-Sequence)
add_subdirectory(DS-Type-Link)
add_subdirectory(DS-Type-Array)
add_subdirectory(DS-Type-Tree)
add_subdirectory(DS-Type-Graph)
add_subdirectory(DS-Sort)
add_subdirectory(DS-Search)